@@ -1,5 +1,6 @@
 package com.example.bookmanagament.librarymanagement.Service;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
@@ -8,23 +9,21 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
+
 
 @Service
 public class FileStorageService {
+    private final String uploadDir = "./uploads";
 
-    private final String uploadDir = "uploads";
-
-    public String storeFile(MultipartFile file) throws IOException {
-        String fileName = StringUtils.cleanPath(file.getOriginalFilename());
-        Path uploadPath = Paths.get(uploadDir);
-
-        if (!Files.exists(uploadPath)) {
-            Files.createDirectories(uploadPath);
+    public String storeFile(MultipartFile file) {
+        try {
+            Files.createDirectories(Path.of(uploadDir));
+            Path targetPath = Path.of(uploadDir, file.getOriginalFilename());
+            Files.copy(file.getInputStream(), targetPath, StandardCopyOption.REPLACE_EXISTING);
+            return targetPath.toString();
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to store file", e);
         }
-
-        Path filePath = uploadPath.resolve(fileName);
-        Files.copy(file.getInputStream(), filePath);
-
-        return fileName;
     }
 }
